# bee

./: .gitignore  CMakeLists.txt  README.md  main.js  package-lock.json  package.json  tsconfig.json  webpack.config.js
dependency/new_parser/: initializer.h  lexer.h  lexer_initializer.h  parser.h
dependency/new_parser/variant/: test_variant.cpp  unique_variant.h
include/: bee.h
include/bee/: exception.h  runtime.h  runtimeBase.h  stackTrace.h  util.h
include/glm/detail/: type_vec.hpp  type_vec1.hpp  type_vec1.inl  type_vec2.hpp  type_vec2.inl  type_vec3.hpp  type_vec3.inl  type_vec4.hpp  type_vec4.inl
include/json/: jsoncpp.inl
include/jsoncpp/: json.h
include/new_parser/: parser.h  parser_initializer.h
include/new_parser/variant/: README.md  packet.h  variant.h
shaders/: billboard-fs.glsl  billboard-gs.glsl  billboard-vs.glsl  cursor-fs.glsl  cursor-vs.glsl  model-fs.glsl  model-vs.glsl  ocean-fs.glsl  ocean-vs.glsl  particleUpdate-fs.glsl  particleUpdate-gs.glsl  particleUpdate-vs.glsl  phong-fs.glsl  ring-fs.glsl  ring-vs.glsl  shadow-fs.glsl  skybox-fs.glsl  skybox-vs.glsl  test-cs.glsl  testMesh-fs.glsl  testMesh-vs.glsl  testTexture2D-vs.glsl  testTexture3D-fs.glsl  testTexture3D-vs.glsl  waterSurface-fs.glsl  waterSurface-vs.glsl
src/: bee.cpp  browser-main.old.ts  browser-main.ts  exception.cpp  index.html  runtime.cpp  runtimeBase.cpp  stackTrace.cpp  util.cpp  util.h
src/basic/: object.h
src/canvas/: canvas.ts
src/configure/: configure.h
src/event/: cameraCarrier.h
src/ext/: cameraCarrier.h  ext.h  firstPersonCamera.h
src/game/: engine3d.ts  game.ts  mission.ts  render.ts  tfTest.ts
src/game/2d/: options.ts  periscreen.ts  splash.ts
src/game/camera/: cameraBase.ts  observer.ts  periscope.ts
src/game/vessel/: component.ts  explode.ts  foam.ts  smoke.ts  submarine.ts  torpedo.ts  track.ts  vessel.ts
src/gl/: buffer.ts  bufferControllers.h  buffers.cpp  buffers.h  common.h  communicator.ts  functools.h  gl.h  material.h  material.ts  mesh.h  mesh.ts  model.h  model.ts  offscreen.h  offscreen.ts  primitive.h  property.h  shader.cpp  shader.h  shader.ts  splay.h  texture.cpp  texture.h  texture.ts  transformFeedback.ts  util.cpp  util.h  vertexAttr.h  vertexAttrs.ts  vertices.h  viewport.ts  window.cpp  window.h
src/lighting/: lighting.ts
src/manager/: manager.h  modelManager.h  scene.h
src/object/: gerstnerWave.ts  meshObject.ts  modelObject.ts  object.ts  ocean.ts  skybox.ts  squareMesh.ts  terrain.ts
src/pipeline/: basicControl.h  camera.cpp  camera.h  firstPersonCamera.h  object.h  objectBase.h  pipeline.h  scene.h  sceneWidgets.h  viewPort.cpp  viewPort.h
src/renderer/: events.ts  renderer.ts
src/runtime/: exception.h  runtime.cpp  runtime.h  stackTrace.cpp
src/scene/: object.ts  scene.ts  technique.ts  viewport.ts
src/shaders/gl/: ocean.frag  ocean.vert  shadow.fs  shadow.vert  shadow.vs  test.frag  test.fs  test.vs
src/shaders/gl2/: SSR-ND.frag  SSR-normal-depth.frag  SSR.frag  SSR.fs  ambientCube.frag  ambientCube.fs  ambientCube.old.frag  ambientCube.vs  autoSkybox.fs  decodeImage.frag  deferImage.fs  depth.frag  depthDecode.frag  encodeImage.frag  explode.frag  explode.vert  fftend.frag  ffthr.frag  fftsrc.frag  fftv.frag  fftv.vert  foam.frag  foam.vert  game.frag  game.vert  gaussBlur.frag  gaussBlurHori.frag  gaussBlurVert.frag  gaussian.frag  gaussian.vert  model.frag  model.vert  noise.frag  normal.frag  normal.fs  normalDepth.frag  normalDepth.fs  ocean.frag  ocean.fs  ocean.old.frag  (+24 more)
src/shaders/gl2/playground/: caustics.frag  caustics.vert  fftend.frag  ffth.frag  ffthr.frag  fftsrc.frag  fftv.frag  fftvr.frag  normalHeight.frag  phillips.frag  pool.frag  pool.vert  testMRT.frag  transformParticle.frag  transformParticle.vert  water.frag  water.vert  whitecap.frag  whitecap.vert
src/shading/: lighting.h  modelObject.cpp  modelObject.h  particles.cpp  particles.h  shaderController.h  shading.h  skybox.h  testTextureObject.h  waterSurface.cpp  waterSurface.h  widgets.h
src/shading/water/: gerstnerWave.h  waterMesh.h
src/techniques/: FFT.ts  FFTWave.ts  FFTsrc.ts  SSR.ts  ambientCube.ts  autoSkybox.ts  caustics.ts  decodeImage.ts  deferImage.ts  depthDecode.ts  encodeImage.ts  gaussBlur.ts  gaussian.ts  lighting.ts  noise.ts  normal.ts  normalHeight.ts  ocean.ts  offscreen.ts  offscreenTest.ts  perlinWave.ts  phillips.ts  pool.ts  postProcess.ts  rect.ts  screenSpaceReflection.ts  shadow.ts  skybox.ts  terrain.ts  transformFeedback.ts  uv.ts  whitecap.ts
src/test/: testRuntime.cpp
src/util/: assets.ts  async.ts  glm.js  text.ts  ulist.ts  xhr.ts
src/window/: window.h  windowBase.cpp  windowBase.h  windowEvent.cpp  windowEvent.h
test/: .testModel.cpp.un~  fuck.cpp  simpleChess.cpp  testComputeShader.cpp  testConfigure.cpp  testEngine.cpp  testGL.cpp  testGerstner.cpp  testLight.cpp  testModel.cpp  testOffscreen.cpp  testParticles.cpp  testRuntime.cpp  testSkeletalAnimation.cpp  testWave.cpp
